--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,8 +7,9 @@ readme = "README.md"
 packages = [{include = "src/speckle_automate_py"}]
 
 [tool.poetry.dependencies]
-python = "^3.11"
-specklepy = "^2.17.0"
+python = "^3.10"
+specklepy = "^2.17.4"
+archaea-simulation = "^1.0.8"
 
 [tool.poetry.group.dev.dependencies]
 black = "^23.3.0"
