--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,7 +8,7 @@ packages = [{include = "src/speckle_automate_py"}]
 
 [tool.poetry.dependencies]
 python = "^3.10"
-specklepy = "^2.17.5"
+specklepy = "2.17.6"
 archaea-simulation = "1.1.20" 
 
 [tool.poetry.group.dev.dependencies]
